--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
     <br>
     
     <!--  RANDOM PROMPT/QUESTION/FORTUNE SECTION  -->
-    <section class="portalPrompt" style="background-color: #FFC864;">
+    <section class="portalPrompt" 
+             style="background-color: #FFC864;
+                    -webkit-filter: blur(5px);
+                    -moz-filter: blur(5px);
+                    -o-filter: blur(5px);
+                    -ms-filter: blur(5px);
+                    filter: blur(5px);
+                    ">
       <p class="promptText">How are ya feeling today?</p>
       <div class="promptInterface">Option 1 ... Option 2 ... Option 3</div>
     </section>
